--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "build": "webpack --config webpack.prod.js",
+    "eslint":"eslint ."
   },
   "keywords": [],
   "author": "ryan",
@@ -16,6 +17,8 @@
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.35",
     "postcss-loader": "^8.1.1",
