--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "eslint":"eslint ."
+    "eslint": "eslint ."
   },
   "keywords": [],
   "author": "ryan",
@@ -29,7 +29,13 @@
     "webpack-merge": "^5.10.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
+    "markdown-it": "^14.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "react-dom": "^18.2.0",
+    "react-markdown-editor-lite": "^1.3.4",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3"
+  },
+  "blogId": "3173640675237385140"
 }
